# quantum-education

./: .directory  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
LaTeX/: .directory  SGGW-thesis.cls  main.aux  main.dvi  main.out  main.tex  main.tex.bak  main.toc  main.toc.bak
docsy/: tresc.docx
src/: chart-data.ts  commands.ts  infinite-well-chart.ts  line-chart.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/csv/: infinite-well.csv
src-tauri/icons/: icon.icns
src-tauri/python/: finite_well.py  free_particle.py  infinite-well.py  infinite_well.py  json_export.py  potential_barrier.ipynb  potential_barrier.py  potential_jump.py
src/html/: barrier.html  dualism.html  finite-well.html  free-particle.html  infinite-well.html  jump.html  settings.html
src/styles/: duality-page.css  quantum-barrier-tool.css  quantum-fi-well-tool.css  quantum-free-tool.css  quantum-inf-well-tool.css  quantum-jump-tool.css
src/ts/: loading-formulas.ts  physics-constants.ts  python-version-check.ts  slider-utility.ts  v-slider-val.ts
src/ts/charts/: classic-ball.ts  classic-jump-chart.ts
src/ts/charts/barrier/: chart.ts  data.ts  options.ts
src/ts/charts/classic-jump-chart/: classic-ball.ts  classic-jump-chart.ts  energy-slider.ts  shoot-button.ts
src/ts/charts/free-particle/: chart.ts  data.ts  (+1 more)
src/ts/narrator/: elements-utility.ts  infinite-well-narrator.ts  jump-narrator.ts  narrator.ts
src/ts/python-interface/: barrier.ts  fi-well.ts  free-particle.ts  inf-well.ts  potential-jump.ts
(+17 files in other folders)
